# expedition-0-backend

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  docker_app.Dockerfile  docker_stt.Dockerfile  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: command.py  command_dto.py  health.py  hint.py  hint_dto.py  tts.py
app/services/: tts_manager.py
app/services/command/: classifier_model.py  classifier_service.py  command_models.py  text_generator.py
app/services/command/classifier/: command_models.py
app/services/hint/: hint_generators.py  logic_functions.py  logic_models.py  logic_nodes.py  logic_ops.py  logic_optimizer.py  logic_solver.py  logic_solver_types.py  models.py
app/services/tts/: base.py  sapi_tts.py  silero_tts.py
app/storage/models/: classifier_cache.py  tts_cache.py
app/util/: datetime_utils.py  profile_cpu.py  text_utils.py
docs/openapi/: generate_hint.yml
res/strings/: command_response_strings.json
scripts/ai/command_classifier/: experiment_check_cuda.py  generate_dataset.ipynb  train_classifier.ipynb
scripts/ai/stt/: experiment_stt.ipynb
serv/stt/: main.py
test/ai/: test_guard_noai.py
test/example/: test_example_api.py
test/services/command/: test_text_generator.py
test/services/hint/: test_hint_generator.py  test_logic_functions.py  test_logic_optimizer.py  test_logic_solver.py
test/services/tts/: test_tts_manager.py
test/storage/models/: test_tts_cache.py
test/util/: test_text_utils.py
